fix showcase layout issue

--- a/support-frontend/assets/pages/showcase/showcase.scss
+++ b/support-frontend/assets/pages/showcase/showcase.scss
@@ -10,6 +10,10 @@
 }
 
 #showcase-landing-page {
+  .gu-content {
+    overflow-x: hidden;
+  }
+
   .component-product-page-hero {
     @include mq($from: tablet) {
       .component-heading-block {
@@ -97,7 +101,7 @@
         .component-left-margin-section__content {
           position: relative;
           border-left: none;
-          
+
           .component-grid-image {
             width: auto;
             height: 150%;
@@ -153,7 +157,7 @@
           }
         }
       }
-      
+
 
       .one-million-circles {
         position: absolute;
